<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="50dp"
        />

    <TextView
        style="@style/simulateLabelStyle"
        android:id="@+id/amount_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="@id/top_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:text="@string/how_much_to_invest"
        />

    <com.doug.ui.InvestmentEditText
        style="@style/simulateInputStyle"
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount_hint"
        app:type="monetary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_label"
        />

    <TextView
        style="@style/simulateLabelStyle"
        android:id="@+id/maturity_date_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:text="@string/which_maturity_date"
        />

    <EditText
        style="@style/simulateInputStyle"
        android:id="@+id/maturity_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maturity_date_label"
        tools:ignore="TextFields" />

    <TextView
        style="@style/simulateLabelStyle"
        android:id="@+id/rate_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/maturity_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:text="@string/which_CDI_percent"
        />

    <EditText
        style="@style/simulateInputStyle"
        android:id="@+id/rate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/rate_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rate_label"
        />

    <Button
        style="@style/buttonInvestment"
        android:id="@+id/simulate"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/simulate"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/rate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/bottom_margin"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/simulate"
        app:layout_constraintBottom_toBottomOf="@id/bottom_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/simulate"
        app:layout_constraintBottom_toBottomOf="@id/bottom_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="center"
        android:textSize="14sp"
        android:text="@string/error_message"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>